methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:22: error: expected class or object definition
def isFacingTrail(couleur : Color):Boolean = {
^SlugSnail:41: error: Unmatched closing brace '}' ignored here
}
^